--- a/core/sh/templates/device/create.html
+++ b/core/sh/templates/device/create.html
@@ -11,137 +11,6 @@
 
 {% block form %}
 
-<button id="toggle-office-filters" class="btn {{filter_btn_color}} mb-1" type="button"> Filtros para oficinas <i class="fas fa-search"></i></button>
-<div id="filter-office-cards" class="d-none">
-  <div class="row">
-    <div class="container">
-    <!-- Tarjeta Filtros Geográficos -->
-      <div class="card mt-1">
-        <div class="card-header {{bg_color}}">
-          Filtros por Ubicacion
-        </div>
-        <div class="card-body row">
-          <div class="form-group col-12">
-            <label for="id_brand">Provincia:</label>
-            {{ form.province }}
-            {% if form.province.errors %}
-            <div class="invalid-feedback d-block">
-              {{ form.province.errors|join:"<br>" }}
-            </div>
-            {% endif %}
-          </div>
-
-          <div class="form-group col-12">
-            <label for="id_model">Localidad:</label>
-            {{ form.location }}
-            {% if form.location.errors %}
-            <div class="invalid-feedback d-block">
-              {{ form.location.errors|join:"<br>" }}
-            </div>
-            {% endif %}
-          </div>
-
-          <div class="form-group col-6">
-            <label for="id_edifice">Edificio:</label>
-            {{ form.edifice }}
-            {% if form.edifice.help_text %}
-            <small class="form-text text-muted">{{form.edifice.help_text}}</small>
-            {% endif %}
-            {% if form.edifice.errors %}
-            <div class="invalid-feedback d-block">
-              {{ form.edifice.errors|join:"<br>" }}
-            </div>
-            {% endif %}
-          </div>
-
-          <div class="form-group col-6">
-            <label for="id_loc">Dependencia:</label>
-            {{ form.dependency }}
-            {% if form.dependency.errors %}
-            <div class="invalid-feedback d-block">
-              {{ form.dependency.errors|join:"<br>" }}
-            </div>
-            {% endif %}
-          </div>
-
-          <div class="form-group col-6">
-            <label for="id_loc">Locacion de Oficina:</label>
-            {{ form.loc }}
-            {% if form.loc.errors %}
-            <div class="invalid-feedback d-block">
-              {{ form.loc.errors|join:"<br>" }}
-            </div>
-            {% endif %}
-          </div>
-          <div>
-            <small class="form-text text-muted">* Recomendado para filtrar oficinas</small>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="form-group">
-  <label for="id_province">Provincia:</label>
-  {{ form.province }}
-  {% if form.province.errors %}
-  <div class="invalid-feedback d-block">
-    {{ form.province.errors|join:"<br>" }}
-  </div>
-  {% endif %}
-</div>
-
-<div class="form-group">
-  <label for="id_location">Localidad:</label>
-  {{ form.location }}
-  {% if form.location.errors %}
-  <div class="invalid-feedback d-block">
-    {{ form.location.errors|join:"<br>" }}
-  </div>
-  {% endif %}
-</div>
-
-<div class="form-group">
-  <label for="id_dependency">Dependencia:</label>
-  {{ form.dependency }}
-  {% if form.dependency.errors %}
-  <div class="invalid-feedback d-block">
-    {{ form.dependency.errors|join:"<br>" }}
-  </div>
-  {% endif %}
-</div>
-
-<div class="form-group">
-  <label for="id_edifice">Edificio:</label>
-  {{ form.edifice }}
-  {% if form.edifice.errors %}
-  <div class="invalid-feedback d-block">
-    {{ form.edifice.errors|join:"<br>" }}
-  </div>
-{% endif %}
-</div>
-
-<div class="form-group">
-  <label for="id_loc">Ubicación:</label>
-  {{ form.loc }}
-  {% if form.loc.errors %}
-  <div class="invalid-feedback d-block">
-    {{ form.loc.errors|join:"<br>" }}
-  </div>
-  {% endif %}
-</div>
-
-<div class="form-group">
-  <label for="id_office">Oficina:</label>
-  {{ form.office }}
-  {% if form.office.errors %}
-  <div class="invalid-feedback d-block">
-    {{ form.office.errors|join:"<br>" }}
-  </div>
-  {% endif %}
-</div>
-
 <div class="form-group">
   <label for="id_dev_type">Tipo de Dispositivo:</label>
   {{ form.dev_type }}
@@ -222,6 +91,169 @@
   {% endif %}
 </div>
 
+<button id="toggle-office-filters" class="btn {{filter_btn_color}} mb-1" type="button"> Filtros para oficinas <i class="fas fa-search"></i></button>
+<div id="filter-office-cards" class="d-none">
+  <div class="row">
+    <div class="container">
+    <!-- Tarjeta Filtros Geográficos -->
+      <div class="card mt-1">
+        <div class="card-header {{bg_color}}">
+          Filtrar Oficina
+        </div>
+        <div class="card-body row">
+          <div class="form-group col-12">
+            <label for="id_brand">Provincia:</label>
+            {{ form.province }}
+            {% if form.province.errors %}
+            <div class="invalid-feedback d-block">
+              {{ form.province.errors|join:"<br>" }}
+            </div>
+            {% endif %}
+          </div>
+
+          <div class="form-group col-12">
+            <label for="id_model">Localidad:</label>
+            {{ form.location }}
+            {% if form.location.errors %}
+            <div class="invalid-feedback d-block">
+              {{ form.location.errors|join:"<br>" }}
+            </div>
+            {% endif %}
+          </div>
+
+          <div class="form-group col-6">
+            <label for="id_edifice">Edificio:</label>
+            {{ form.edifice }}
+            {% if form.edifice.help_text %}
+            <small class="form-text text-muted">{{form.edifice.help_text}}</small>
+            {% endif %}
+            {% if form.edifice.errors %}
+            <div class="invalid-feedback d-block">
+              {{ form.edifice.errors|join:"<br>" }}
+            </div>
+            {% endif %}
+          </div>
+
+          <div class="form-group col-6">
+            <label for="id_loc">Dependencia:</label>
+            {{ form.dependency }}
+            {% if form.dependency.errors %}
+            <div class="invalid-feedback d-block">
+              {{ form.dependency.errors|join:"<br>" }}
+            </div>
+            {% endif %}
+          </div>
+
+          <div class="form-group col-6">
+            <label for="id_loc">Locacion de Oficina:</label>
+            {{ form.loc }}
+            {% if form.loc.errors %}
+            <div class="invalid-feedback d-block">
+              {{ form.loc.errors|join:"<br>" }}
+            </div>
+            {% endif %}
+          </div>
+          <div>
+            <small class="form-text text-muted">* Recomendado para filtrar oficinas</small>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="form-group">
+  <label for="id_office">Oficina:</label>
+  {{ form.office }}
+  {% if form.office.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.office.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+
+<div class="form-group">
+  <label for="id_employee">Empleado:</label>
+  {{ form.employee }}
+  {% if form.employee.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.employee.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+
+<hr class="my-2 border-light">
+<div class="container">
+  <h5 class="text-center display-6">Seleccione el puerto desde el cual, el dispositivo, se conecta a la red</h5>
+</div>
+<hr class="my-2 border-light">
+
+<button id="toggle-ports-filters" class="btn {{filter_btn_color}} mb-1" type="button"> Filtros para puertos <i class="fas fa-search"></i></button>
+<div id="filter-port-cards" class="d-none">
+  <div class="row">
+    <div class="container">
+      <div class="card my-1">
+
+        <div class="card-header {{bg_color}}">
+          Filtrar por Conexión
+        </div>
+        <div class="card-body row">
+
+          <div class="form-group col-6">
+            <label for="id_edifice_ports">Edificio</label>
+            {{ form.edifice_ports }}
+            {% if form.edifice_ports.errors %}
+            <div class="invalid-feedback d-block">
+              {{ form.edifice_ports.errors|join:"<br>" }}
+            </div>
+            {% endif %}
+          </div>
+
+          <div class="form-group col-6">
+            <label for="id_loc_ports">Ubicación de Oficina:</label>
+            {{ form.loc_ports }}
+            {% if form.loc_ports.errors %}
+            <div class="invalid-feedback d-block">
+              {{ form.loc_ports.errors|join:"<br>" }}
+            </div>
+            {% endif %}
+          </div>
+
+          <div class="form-group col-12">
+            <label for="id_office_ports">Oficina:</label>
+            {{ form.office_ports }}
+            {% if form.office_ports.errors %}
+            <div class="invalid-feedback d-block">
+              {{ form.office_ports.errors|join:"<br>" }}
+            </div>
+            {% endif %}
+          </div>
+
+          <div class="form-group col-6">
+            <label for="id_rack_ports">Rack:</label>
+            {{ form.rack_ports }}
+            {% if form.rack_ports.errors %}
+            <div class="invalid-feedback d-block">
+              {{ form.rack_ports.errors|join:"<br>" }}
+            </div>
+            {% endif %}
+          </div>
+
+          <div class="form-group col-6">
+            <label for="id_switch_ports">Switch de Ingreso:</label>
+            {{ form.switch_ports }}
+            {% if form.switch_ports.errors %}
+            <div class="invalid-feedback d-block">
+              {{ form.switch_ports.errors|join:"<br>" }}
+            </div>
+            {% endif %}
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="form-group">
   <label for="id_wall_port_in">Boca de Pared:</label>
   {{ form.wall_port_in }}
@@ -242,18 +274,9 @@
   {% endif %}
 </div>
 
-<div class="form-group">
-  <label for="id_employee">Empleado:</label>
-  {{ form.employee }}
-  {% if form.employee.errors %}
-  <div class="invalid-feedback d-block">
-    {{ form.employee.errors|join:"<br>" }}
-  </div>
-  {% endif %}
-</div>
-
 {% endblock form %}
 
 {% block form_scripts %}
   <script src="{% static 'device/js/form.js' %}"></script>
+  <script src="{% static 'js/filters.js' %}"></script>
 {% endblock form_scripts %}
