--- a/core/sh/templates/movements/list.html
+++ b/core/sh/templates/movements/list.html
@@ -1,19 +1,20 @@
-{% extends 'list.html' %} 
+{% extends 'list.html' %}
 
 {% load static %}
 
 {% block header_list %}
  <!-- Datatables de la App sh -->
- <script src="{% static 'office/js/list.js' %}"></script>
+ <script src="{% static 'movements/js/list.js' %}"></script>
 {% endblock header_list %}
 
 {% block columns %}
 
-  <th scope="col" style="width: 5%;">Id</thr>
-  <th scope="col" style="width: 15%;">Localidad</thr>
-  <th scope="col" style="width: 20%;">Edificio</th>
-  <th scope="col" style="width: 25%;">Oficina</th>
-  <th scope="col" style="width: 25%;">Dependencia</th>
+  <th scope="col" style="width: 5%;">Id</th>
+  <th scope="col" style="width: 15%;">Dispositivo</th>
+  <th scope="col" style="width: 20%;">Movimiento</th>
+  <th scope="col" style="width: 25%;">Tecnico</th>
+  <th scope="col" style="width: 25%;">Fecha</th>
+  <th scope="col" style="width: 25%;">Inusmo Utilizado</th>
   <th scope="col" style="width: 10%;">Opciones</th>
 
 {% endblock columns %}
@@ -27,7 +28,7 @@
 {% block add_button %}
 
 <a href="{{ create_url }}" type="button" class="btn btn-primary" id="{{btn_add_id}}">
-  <i class="fas fa-plus"></i> Agregar Oficina
+  <i class="fas fa-plus"></i> Agregar Movimiento
 </a>
 
 {% endblock add_button %}
