--- a/core/sh/templates/switch/create.html
+++ b/core/sh/templates/switch/create.html
@@ -47,7 +47,16 @@
                         </div>
                         {% endif %}
                     </div>
-                    <div class="form-group col-3">
+                    <div class="form-group col-4">
+                        <label for="id_serial_n">Tipo de Switch:</label>
+                        {{ form.switch_type }}
+                        {% if form.switch_type.errors %}
+                        <div class="invalid-feedback d-block">
+                            {{ form.switch_type.errors|join:"<br>" }}
+                        </div>
+                        {% endif %}
+                    </div>
+                    <div class="form-group col-4">
                         <label for="id_ports_q">Cantidad de Puertos:</label>
                         {{ form.ports_q }}
                         {% if form.ports_q.help_text %}
@@ -59,7 +68,7 @@
                         </div>
                     {% endif %}
                     </div>
-                    <div class="form-group col-3">
+                    <div class="form-group col-4">
                         <label for="id_ip">Dirección IP:</label>
                         {{ form.ip }}
                         {% if form.ip.errors %}
