--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,6 +3,7 @@
 {% block content_class %}dashboard-content{% endblock content_class %}
 
 {% block content %}
+<h3 class="text-center mb-3 display-4"> CONSULTAR ESTADISTICAS </h3>
 <div class="container h-100 d-flex align-items-center justify-content-center">
     <div class="row w-100">
         <div class="col-lg-6 col-md-6 mb-4 d-flex justify-content-center">
@@ -29,6 +30,9 @@
                 <span class="mt-2">Monitores</span>
             </a>
         </div>
+    </div>
+    <div class="container">
+        <h3 class="text-center mb-3 display-4"> <i class="fas fa-ban" aria-hidden="true"></i> SITIO EN CONSTRUCCION, NO FUNCIONA. SELECCIONAR OPCIONES DE LA BARRA LATERAL </h3>
     </div>
 </div>
 {% endblock content %}
